--- a/app/design/frontend/CustomTheme/custom/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/CustomTheme/custom/Magento_Catalog/layout/catalog_product_view.xml
@@ -3,5 +3,14 @@
     <body>
         <referenceBlock name="view.addto.compare" remove="true"/>
         <referenceBlock name="view.addto.wishlist" remove="true"/>
+
+        <referenceContainer name="product.info.extrahint">
+            <block name="secure.logos" template="Magento_Catalog::secure_logos.phtml" before="-">
+                <arguments>
+                    <argument name="title" xsi:type="string">We accept:</argument>
+                    <argument name="path_image" xsi:type="string">Magento_Catalog::images/payments.svg</argument>
+                </arguments>
+            </block>
+        </referenceContainer>
     </body>
 </page>
